@@ -23,6 +23,10 @@ ImageMagick Changes</font></font></font></b></td>
 <dl>
 <dd>
 <pre>
+2001-11-05  Cristy  <cristy@mystic.es.dupont.com>
+	* Added -level to convert/mogrify (suggested by
+	  mericson@phillynews.kom).
+
 2001-11-04  Cristy  <cristy@mystic.es.dupont.com>
 	* -shadow/-shade were not distiguished.
 
