@@ -1,3 +1,7 @@
+2001-11-05  Cristy  <cristy@mystic.es.dupont.com>
+	* Added -level to convert/mogrify (suggested by
+	  mericson@phillynews.kom).
+
 2001-11-04  Cristy  <cristy@mystic.es.dupont.com>
 	* -shadow/-shade were not distiguished.
 
